# mlregression

./: README.md  setup.cfg  setup.py
ml_regression/: mlreg.py
ml_regression/base/: base_mlreg.py
ml_regression/tests/: demo.py
ml_regression/utils/: model_params.py  params.py  sanity_check.py  tools.py
mlregression/tests/: demo.py
src/: demo.py  develop.py  readme_demo.py  tests.py
src/mlregression/: __init__.py  mlreg.py  targeting.py
src/mlregression/base/: base_mlreg.py
src/mlregression/estimator/: boosting.py  feature_selection.py  linear_model.py
src/mlregression/utils/: cv.py  model_params.py  preprocess.py  sanity_check.py  tools.py
tests/: demo.py  tests.py
tests/example/: demo.py  tests.py
