[metadata]
name = mlregression
version = 0.1.7
author = Nicolaj Søndergaard Mühlbach
author_email = n.muhlbach@gmail.com
description = Machine learning regression off-the-shelf
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/muhlbach/mlregression
keywords = machine learning, regression, tuning
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
package_dir =
    = src
# install_requires =
#     numpy >=1.19
#     pandas >=1.3
#     scikit-learn >=1
#     scikit-learn-intelex >= 2021.3
#     daal >= 2021.3
#     daal4py >= 2021.3
#     tbb >= 2021.4
#     xgboost >=1.3
#     lightgbm >=3.2

[options.packages.find]
where = src
